--- a/client/FrontEnd/front-end/public/index.html
+++ b/client/FrontEnd/front-end/public/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style type="text/tailwindcss">
       @layer utilities {
-        .clip-your-needful-style {
+        .clip {
           clip-path: polygon(0 25%, 50% 0, 100% 25%,100% 75%,50% 100%, 0 75%);
         }
      }
