--- a/client/FrontEnd/front-end/public/index.html
+++ b/client/FrontEnd/front-end/public/index.html
@@ -19,6 +19,9 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/23bf886e32.js" crossorigin="anonymous"></script>
   </body>
+
 </html>
