--- a/client/FrontEnd/front-end/public/index.html
+++ b/client/FrontEnd/front-end/public/index.html
@@ -20,6 +20,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
+    <script src="https://kit.fontawesome.com/23bf886e32.js" crossorigin="anonymous"></script>
     <div id="root"></div>
     <script src="https://kit.fontawesome.com/23bf886e32.js" crossorigin="anonymous"></script>
   </body>
