--- a/client/FrontEnd/front-end/public/index.html
+++ b/client/FrontEnd/front-end/public/index.html
@@ -22,7 +22,7 @@
         }
       }
     </style>
-    <title>React App</title>
+    <title>E-Cell MNNIT Allahabad</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
